<resources>
    <string name="app_name">Scientific_Calculator</string>
    <string name="c">C</string>
    <string name="change_sign">+/-</string>
    <string name="mod">%</string>
    <string name="divide">÷</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="decimal">.</string>
    <string name="equal">=</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">×</string>
    <string name="_0">0</string>
    <string name="mc">mc</string>
    <string name="x3">χ³</string>
    <string name="x_power_y">X<sup><small>y</small></sup></string>
    <string name="e_power_x">e<sup><small>x</small></sup></string>
    <string name="cube_root">∛x</string>
    <string name="y_root"><sup><small>y</small></sup>√x</string>
    <string name="nat_log">ln</string>
    <string name="log_base_10">log<sub><small>10</small></sub></string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="e">e</string>
    <string name="ee">EE</string>
    <string name="cosh">cosh</string>
    <string name="tanh">tanh</string>
    <string name="pie">π</string>
    <string name="rand">Rand</string>
    <string name="left_param">(</string>
    <string name="right_param">)</string>
    <string name="_2nd">2<sup><small>nd</small></sup></string>
    <string name="x_square">x<sup><small>2</small></sup></string>
    <string name="one_over_x"><small>1/x</small></string>
    <string name="square_root_x">√x</string>
    <string name="x_factorial">x!</string>
    <string name="sin">sin</string>
    <string name="rad">Rad</string>
    <string name="sinh">sinh</string>
    <string name="m_plus">m+</string>
    <string name="m_minus">m-</string>
    <string name="mr">mr</string>
    <string name="ten_power_x">10<sup><small>x</small></sup></string>
</resources>