<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/constraintLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="390dp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="227dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/clear"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="5dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:maxWidth="20dp"
            android:onClick="clearForm"
            android:text="@string/c"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/change_sign"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="5dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:text="@string/change_sign"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/mod"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="5dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="@color/grey"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:text="@string/mod"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <Button
            android:id="@+id/divide"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="5dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:text="@string/divide"
            android:textColor="@color/white"
            android:textSize="30sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/seven"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="5dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_grey"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:maxWidth="20dp"
            android:text="@string/_7"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/eight"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="5dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_grey"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:text="@string/_8"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/nine"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="5dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_grey"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:text="@string/_9"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/multiply"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="5dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:text="@string/multiply"
            android:textColor="@color/white"
            android:textSize="30sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <Button
            android:id="@+id/four"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="5dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_grey"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:maxWidth="20dp"
            android:text="@string/_4"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/five"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="5dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_grey"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:text="@string/_5"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/six"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="5dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_grey"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:text="@string/_6"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/minus"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="5dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:text="@string/subtract"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="114dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <Button
            android:id="@+id/one"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="5dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_grey"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:maxWidth="20dp"
            android:onClick="oneButton"
            android:text="@string/_1"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/two"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="5dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_grey"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:text="@string/_2"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/three"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="5dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_grey"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:text="@string/_3"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/add"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="5dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/zero"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="110dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_grey"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:maxWidth="20dp"
            android:text="   0"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/decimal"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="5dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_grey"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:text="@string/decimal"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <Button
            android:id="@+id/equal"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="5dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:insetLeft="5dp"
            android:insetRight="5dp"
            android:text="@string/equal"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/results"
        android:layout_width="379dp"
        android:layout_height="62dp"
        android:autofillHints="false"
        android:background="@color/black"
        android:inputType="none"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.842"
        tools:ignore="LabelFor" />

</androidx.constraintlayout.widget.ConstraintLayout>